# codeSage

./: .gitignore  README.md
.github/workflows/: build.yml
analyzer/: CMakeLists.txt
analyzer/src/: ._function_collector.h  ast_consumer.cpp  ast_consumer.h  dataflow_analyzer.cpp  dataflow_analyzer.h  function_collector.cpp  function_collector.h  json_output.cpp  json_output.h  logger.cpp  logger.h  main.cpp  query_engine.cpp  query_engine.h  storage.cpp  storage.h  variable_collector.cpp  variable_collector.h
analyzer/test/: test_analyzer.cpp  test_dataflow.cpp  test_funcptr.cpp  test_query.cpp  test_storage.cpp
analyzer/test/fixtures/: sample_lib.c  sample_lib.h  sample_main.c
backend/: package-lock.json  package.json
backend/src/: config.ts  index.ts  logger.ts  server.ts
backend/src/routes/: callgraph.ts  dataflow.ts  functions.ts  parse.ts  variables.ts
backend/src/services/: analyzer.ts
backend/test/: routes.test.ts  services.test.ts
doc/: 需求规范.md
extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
extension/scripts/: bundle-backend.js
extension/src/: apiClient.ts  backendManager.ts  config.ts  extension.ts  logger.ts
extension/src/commands/: parseProject.ts  searchFunction.ts  searchVariable.ts
extension/src/views/: graphPanel.ts  searchResultsProvider.ts
extension/test/: extension.test.ts
extension/webview/: index.html  package-lock.json  package.json  vite.config.ts
extension/webview/src/: App.tsx
extension/webview/src/components/: GraphView.tsx  MiniMap.tsx  NodeDetails.tsx  SearchBar.tsx  Toolbar.tsx
extension/webview/src/hooks/: useGraph.ts  useSearch.ts  useVSCode.ts
extension/webview/src/styles/: index.css
extension/webview/src/types/: cytoscape-dagre.d.ts
proto/: codesage.proto
scripts/: package.sh
test/integration/: run_integration_test.sh
test/integration/fixtures/project/: main.c  utils.c  utils.h
